--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,20 @@ body
   position: relative;
   height: 100%;
 }
+.navbar
+{
+
+  font-size: 20px;
+}
+.navbar-brand
+{
+    padding-left: 40px;
+  font-size: 100px;
+}
+.nav-item
+{
+  padding-right: 30px;
+}
 .top-container
 {
   padding: 25% 0%;
@@ -119,4 +133,12 @@ body
 #email
 {
   width: 50px;
+}
+footer{
+  background-color: black;
+  color: white;
+  text-align: center;
+  width: 100%;
+  position: absolute;
+  bottom: 0PX;
 }
